k8s/coomiix-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coomiix
  labels:
    environment: development
