k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deploy
  namespace: coomiix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.2
          command:
            - "/bin/sh"
            - "-c"
            - "exec /opt/keycloak/bin/kc.sh start-dev"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: coomiix
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
