k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  namespace: coomiix
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage-link
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage-link
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: coomiix
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
